{
    "name": "controllerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "17c67928-5448-42c1-9684-163c53ac5c3c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e49b5bfb-fb91-4413-8e01-9183f867b7b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9e3114f4-2b5e-4482-be39-ec254bd7437e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ball",
                    "type": "Button",
                    "id": "44d3f36b-a59c-4044-a400-340eb55f9231",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "5de3571a-d964-48e4-9cd6-b653e2934b65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "3b3762c7-6acd-4e2e-b444-b0fef5c13599",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "ff3275bf-1cb6-430e-a624-a0bc6140c724",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "sideStep",
                    "type": "Button",
                    "id": "d111d3c2-1e34-4f9e-9d2b-76e968990dee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "startGame",
                    "type": "Button",
                    "id": "61f0c9b0-9ecd-4410-b08d-79c407f20c4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mainMenu",
                    "type": "Button",
                    "id": "1d6ee03c-004f-4458-9447-1432a2f0ded4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "continueTutorial",
                    "type": "Button",
                    "id": "9b40b28b-2245-4ff0-951e-89b28cfaa437",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "pause",
                    "type": "Button",
                    "id": "d578f00a-e874-4574-90ac-7eacd8d2afea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "quit2",
                    "type": "Button",
                    "id": "42651a85-65df-4245-b24a-60e2370bcb9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "quit3",
                    "type": "Button",
                    "id": "ba2d0b22-2014-451f-93fa-e1eb40a6152f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29e305dc-0a83-4c19-a906-5d7ff3783b06",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a843edd-54a3-45a9-8a2a-f4636cea0a22",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a3519d6-a2e3-449f-b007-141a90aba203",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "Ball",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f23698f-a3a1-4740-a9b4-5a086fe8c7e7",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5153285c-d645-4ed4-aa9c-5afd3ffbd045",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "275fdc3f-2f5c-4e35-8010-82bc397ac6cf",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a58c2a2a-1c60-4b0f-b4da-c98cfc0df10b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sideStep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42544007-3674-41f2-93d6-03b6c29f64ec",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "mainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ba104d7-b3ad-46ea-ab56-f04507112f17",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "continueTutorial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfc76611-cbb9-49b6-a55f-ae849d5d5423",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17feec41-70b1-4378-8312-5d54a6f7884a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerOne",
                    "action": "quit2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7030f7e-eb93-47ec-a186-14502e758aff",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "quit3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay2",
            "id": "752be0f2-5726-4e26-9b03-e4caa534db1e",
            "actions": [
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "ffb29c5c-b8b4-41f2-bea3-c6dfac21bf05",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ball",
                    "type": "Button",
                    "id": "89fcefb4-15dd-446e-8fd3-b871fe1d9541",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6189de47-f918-402b-ba97-3ade3b44af32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "fc9666cc-96f8-4947-8b7b-8b840ae18b39",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "1ea5264a-a185-4e22-94a0-71c12bbef2a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "c9780d5f-b8cf-4fae-8f75-a15cb7040784",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "sideStep",
                    "type": "Button",
                    "id": "c69b4c8e-a152-416a-ab49-bf6fea2195c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "quit2",
                    "type": "Button",
                    "id": "5e43e40b-da73-415f-bbe4-7bf28a10d09f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "mainMenu",
                    "type": "Button",
                    "id": "6b0ff0df-a440-434c-b8b4-58a9ce654aee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "continueTutorial",
                    "type": "Button",
                    "id": "0b37e789-9135-4d84-9619-1cbfea9c15e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "pause",
                    "type": "Button",
                    "id": "9acbd825-51e2-4499-8b74-1b3b64c328cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "quit3",
                    "type": "Button",
                    "id": "17e82779-89e2-4568-8a0b-cab81dc64aac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ef83f9d-e7b1-4248-a7e4-7caf8df28a5f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33adf04c-6886-4508-ad6a-1cb0a723cdaf",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd851653-6cd9-4161-95c0-3d6fcb8766a7",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "Ball",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb14703f-ae10-488b-a53c-93215a15fbc6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b82e7cc-fafe-45aa-ac70-810c3a12598e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75a97e26-46e7-4506-99c1-ab50dd840e61",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ef1180d-4706-405d-a311-c988c7db8eda",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sideStep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20f6a8c2-0e2d-4b1e-96f0-1a6de764f42d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "quit2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1b62459-f918-4c86-8781-02e782ffde9d",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "mainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff395b09-e626-4217-bbdb-e73a9cf5b0bd",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "playerTwo",
                    "action": "continueTutorial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7de0e2b3-59cb-41a9-ab51-d4b69ce1fc8b",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07874618-db98-4309-b7a2-9dadcbdbab97",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "quit3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "playerOne",
            "bindingGroup": "playerOne",
            "devices": []
        },
        {
            "name": "playerTwo",
            "bindingGroup": "playerTwo",
            "devices": []
        }
    ]
}